// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Map Popup FloatingCarEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 cPqJxe">
  <div id="focus-car_6861-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 jRNaQh">
      MILES Car: 0541
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 giBPod">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup FloatingVehicleEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 cPqJxe">
  <div id="focus-22bike_686122-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 jRNaQh">
      BIKETOWN Free-floating bike: 0541
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 giBPod">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StationEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 cPqJxe">
  <div id="focus-22hub_158022-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 jRNaQh">
      BIKETOWN SW Morrison at 18th
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <div>
        Available bikes: 6
      </div>
      <div>
        Available docks: 11
      </div>
    </p>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 giBPod">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 cPqJxe">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 jRNaQh">
      W Burnside &amp; SW 2nd
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Stop ID: 9526
      </strong>
      <button class="styled__ViewStopButton-sc-12v7ov3-0 hXaHvR">
        Stop Viewer
      </button>
    </p>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 giBPod">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntityClosedStop smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 cPqJxe">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 jRNaQh">
      W Burnside &amp; SW 2nd
    </header>
    <div class="src__ClosedAlertWrapper-sc-1nssq3h-0 zvCZy">
      <svg viewbox="0 0 512 512"
           height="15"
           width="15"
           aria-hidden="true"
           focusable="false"
           fill="currentColor"
           xmlns="http://www.w3.org/2000/svg"
           class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
      >
        <path fill="currentColor"
              d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7.2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8.2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24v112c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224c0-17.7-14.3-32-32-32s-32 14.3-32 32 14.3 32 32 32 32-14.3 32-32z"
        >
        </path>
      </svg>
      Closed stop
    </div>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <button class="styled__ViewStopButton-sc-12v7ov3-0 bbtcwi">
        Stop Viewer
      </button>
    </p>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 giBPod">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntityNoHandlers smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 cPqJxe">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 jRNaQh">
      W Burnside &amp; SW 2nd
    </header>
  </div>
</div>
`;

exports[`Map Popup StopEntityNoStopCode smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 cPqJxe">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 jRNaQh">
      W Burnside &amp; SW 2nd
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <button class="styled__ViewStopButton-sc-12v7ov3-0 bbtcwi">
        Stop Viewer
      </button>
    </p>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 giBPod">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntityNoViewedStopHandler smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 cPqJxe">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 jRNaQh">
      W Burnside &amp; SW 2nd
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Stop ID: 9526
      </strong>
    </p>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 giBPod">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntityWithEntityPrefix smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 cPqJxe">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 jRNaQh">
      <span class="MapPopupstory__DemoIcon-sc-vlk9f0-0 hzuFzw">
        W
      </span>
      W Burnside &amp; SW 2nd
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Stop ID: 9526
      </strong>
      <button class="styled__ViewStopButton-sc-12v7ov3-0 hXaHvR">
        Stop Viewer
      </button>
    </p>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 giBPod">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntityWithFeedName smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 cPqJxe">
  <div id="focus-trimet3A9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 jRNaQh">
      W Burnside &amp; SW 2nd
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Stop ID: TriMet 9526
      </strong>
      <button class="styled__ViewStopButton-sc-12v7ov3-0 hXaHvR">
        Stop Viewer
      </button>
    </p>
    <p class="styled__PopupRow-sc-12kjso7-2 ckOOWr">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 giBPod">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gsVfXo">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 ekklXB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;
